--- a/17-poisson-negbin-glmm.Rmd
+++ b/17-poisson-negbin-glmm.Rmd
@@ -12,7 +12,7 @@
 We are going to work with one of the data sets from:
 Artelle, K. A., S. C. Anderson, J. D. Reynolds, A. B. Cooper, P. C. Paquet, and C. T. Darimont. 2016. Ecology of conflict: marine food supply affects human-wildlife interactions on land. Scientific Reports 6:25936.
 
-The data set represents the number of grizzly bears that were killed because of conflict with humans (`late_kills`) across various Grizzly Bear Population Units (`gbpu`). There are a number of possible predictors. First of the annual predictors: an index of salmon biomass, the number of conflict kills in the previous 3 years, the numeric year, and the mean annual temperature. Then a number of group-level predictors: mean temperature, mean annual precipitation, human population, and the number of grizzly bears in the unit. There is an offset term for usable area for grizzly bears in the population unit so that the number of kills is scaled to be per available area. These predictors have been transformed (e.g. log), centered, and scaled by 2 times their standard deviations to make the magnitude of their effects approximately comparable. This is a slightly simplified version of the data set and model used in the paper. 
+The data set represents the number of grizzly bears that were killed because of conflict with humans (`late_kills`) across various Grizzly Bear Population Units (`gbpu`). There are a number of possible predictors. First, the annual predictors: an index of salmon biomass, the number of conflict kills in the previous 3 years, the numeric year, and the mean annual temperature. Then a number of group-level predictors: mean temperature, mean annual precipitation, human population, and the number of grizzly bears in the unit. There is an offset term for usable area for grizzly bears in the population unit so that the number of kills is scaled to be per available area. These predictors have been transformed (e.g. log), centered, and scaled by 2 times their standard deviations to make the magnitude of their effects approximately comparable. This is a slightly simplified version of the data set and model used in the paper.
 
 Let's read in the data and look at it:
 
