--- a/13-overdispersed-glms.Rmd
+++ b/13-overdispersed-glms.Rmd
@@ -71,7 +71,7 @@ d$x_group <- findInterval(d$x, seq(min(d$x), max(d$x), length.out = 15))
 Let's fit a GLM with a Poisson distribution and a log link even though we know that the data are overdispersed.
 
 ```{r}
-(m_poisson <- glm(y ~ x, family = poisson(link = "log")))
+(m_poisson <- glm(y ~ x, family = poisson(link = "log"), data = d))
 
 p <- sjp.glm(m_poisson, type = "eff", show.ci = TRUE, prnt.plot = FALSE)
 ggplot(p$data, aes(x, y, ymin = conf.low, ymax = conf.high)) +
@@ -105,7 +105,7 @@ This means we leave the world of likelihood and can't simply calculate values su
 (Knowing what we discussed previously about the 2 negative binomial distributions, what would be an alternative way to fit these data?)
 
 ```{r}
-(m_qp <- glm(y ~ x, family = quasipoisson(link = "log")))
+(m_qp <- glm(y ~ x, family = quasipoisson(link = "log"), data = d))
 confint(m_qp)
 confint(m_poisson)
 ```
