--- a/14-glm-practice-titanic.Rmd
+++ b/14-glm-practice-titanic.Rmd
@@ -14,11 +14,11 @@ You can read in the data and clean it up a bit with the following code:
 ```{r, message=FALSE}
 library(tidyverse)
 d <- read_csv("data/raw/titanic.csv")
-if (interactive()) View(d)
 d <- mutate(d, female = ifelse(Sex == "female", 1, 0))
 names(d) <- tolower(names(d))
 d <- select(d, survived, age, fare, female) %>% na.omit %>% as_data_frame()
 d
+# View(d)
 ```
 
 # Explore the data set 
@@ -154,7 +154,7 @@ If you made it this far, read in the original data frame again and try plotting 
 d <- read_csv("data/raw/titanic.csv")
 d <- mutate(d, female = ifelse(Sex == "female", 1, 0))
 names(d) <- tolower(names(d))
-if (interactive()) View(d)
+# View(d)
 ```
 
 Your turn:
